<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical">




    <TextView
        android:text="@string/naziv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView20"
        android:textStyle="bold"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/auction_name"
       />

    <TextView
        android:text="@string/pocetak_aukcije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextView002"
        android:textStyle="bold"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/auction_date" />

    <TextView
        android:text="@string/pocetna_cena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        android:textStyle="bold"/>

    <TextView

        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/auction_price" />

    <TextView
        android:text="@string/kraj_aukcije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:textStyle="bold"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/auction_end" />



</LinearLayout>
