<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lazar.domaci.UserActivity"
    android:orientation="vertical"
    android:weightSum="1">


 >

    <ImageView
        android:layout_width="333dp"
        android:layout_height="108dp"
        app:srcCompat="@drawable/mrbean"
        android:id="@+id/imageView"
        android:layout_weight="0.17"
        android:layout_gravity="center"/>

    <TextView
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:textSize="14sp" />

    <TextView
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="20dp" />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/user_email" />

   <TextView
        android:text="@string/password_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_password" />

    <TextView
        android:text="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_address" />

    <TextView
        android:text="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_phone"
        android:layout_weight="0.08" />
</LinearLayout>
